# 2021-ba-sextro

./: .gitignore  .gitmodules  Cargo.toml  README.md  gitlab-ci.yml
analyzer/: __main__.py  main.py  requirements.txt
analyzer/scripts/: boxplots.py  correction.py  histograms.py  tables.py
analyzer/src/: analyzer.py  experiments.py  features.py  halstead.py  mapping.py  mappings.py  metrics.py  statistics.py  tables.py  utils.py  values.py
collector/: Cargo.toml
collector/src/: collector.rs  finding.rs  main.rs  out.rs  repo.rs  src.rs  tool.rs  utils.rs
data/: awesome-rust.txt
data/collector/: .gitignore
data/collector/in/: awesome-cpp.txt  awesome-rust.txt
data/in/: tokens.txt
example/data/analyzer/res/: results_without_raw_values.json  statistic_tests.json
example/data/collector/res/AnderEnder/s3find-rs/: build.rs.json  src_arg.rs.json  src_bin_s3find.rs.json  src_command.rs.json  src_error.rs.json  src_filter.rs.json  src_function.rs.json  src_lib.rs.json  src_run.rs.json  src_utils.rs.json
example/data/collector/res/alacritty/alacritty/: alacritty_build.rs.json  alacritty_config_derive_src_de_enum.rs.json  alacritty_config_derive_src_de_struct.rs.json  alacritty_config_derive_src_lib.rs.json  alacritty_config_derive_tests_config.rs.json  alacritty_src_cli.rs.json  alacritty_src_clipboard.rs.json  alacritty_src_config_bell.rs.json  alacritty_src_config_bindings.rs.json  alacritty_src_config_color.rs.json  alacritty_src_config_debug.rs.json  (+55 more)
src/: analyzer.rs  file.rs  finding.rs  main.rs  metrics.rs  out.rs  repo.rs  src.rs  tool.rs  utils.rs
(+62 files in other folders)
