[package]
name = "github-rust-tool"
version = "0.0.1"
authors = ["Marvin Sextro <marvin.sextro@gmail.com>"]
edition = "2018"

[dependencies]
quicli = "0.4"
structopt = "0.3.17"
tokio = { version = "1.6.0", features = ["full"] }
futures = "0.3.15"
async-gitlib = "0.0.2"
unbounded-interval-tree = "0.2.3"
serde_json = "1.0"
url = "2.2.2"
walkdir = "2.3.2"
serde = "1.0.126"