[package]
authors = ["Marvin Sextro <marvin.sextro@gmail.com>"]
description = "A tool for collecting metrics on Rust code."
edition = "2018"
license = "MIT"
name = "collector"
version = "0.0.1"

[dependencies]
async-gitlib = "0.0.2"
chrono = "0.4"
fern = "0.5"
futures = "0.3.15"
indicatif = "0.16.2"
log = "0.4"
quicli = "0.4"
serde = "1.0.126"
serde_json = {version = "1.0", features = ["preserve_order"]}
structopt = "0.3.17"
tokio = {version = "1.6.0", features = ["full"]}
url = "2.2.2"
walkdir = "2.3.2"
